--- a/HostsUpdater/App.config
+++ b/HostsUpdater/App.config
@@ -12,5 +12,6 @@
     <add key="ApplicationTitle" value="Hosts Updater"  />
     <add key="StevenBlacksHostsFileUrl" value="https://raw.githubusercontent.com/StevenBlack/hosts/master/alternates/fakenews-gambling-porn-social/hosts" />
     <add key="AmpHostsFileUrl" value="https://www.github.developerdan.com/hosts/lists/amp-hosts-extended.txt" />
+    <add key="MaxAgeOfTempFilesInDays" value="1" />
   </ApplicationConfiguration>
 </configuration>
