Updating HostsUpdater app to take command line parameters.

--- a/HostsUpdater/App.config
+++ b/HostsUpdater/App.config
@@ -8,7 +8,8 @@
     </startup>
   <ApplicationConfiguration>
     <add key="ApplicationTitle" value="Hosts Updater" />
-    <add key="SteveBlacksHostsFileUrl" value="https://raw.githubusercontent.com/StevenBlack/hosts/master/alternates/fakenews-gambling-porn-social/hosts" />
+    <add key="SteveBlacksHostsFileUrl" value="https://raw.githubusercontent.com/StevenBlack/hosts/master/alternates/fakenews-gambling-porn/hosts" />
+    <add key="SteveBlacksHostsIncludingSocialFileUrl" value="https://raw.githubusercontent.com/StevenBlack/hosts/master/alternates/fakenews-gambling-porn-social/hosts" />
     <add key="AmpHostsFileUrl" value="https://www.github.developerdan.com/hosts/lists/amp-hosts-extended.txt" />
     <add key="MaxAgeOfTempFilesInDays" value="1" />
   </ApplicationConfiguration>
